--- a/week02/index.html
+++ b/week02/index.html
@@ -27,5 +27,27 @@
 
 <p>Gorgonzola is...</p> 
   
-</body>  
+  <h3>Groceries</h3>
+  
+<ul>
+  <li>Eggs</li>
+  <li>Milk</li>
+  <li>Cheese</li>
+  <li>Co-Co Pops</li>
+  <li>Orange Juice</li>
+</ul>
+
+  <h3>Recipe for cookkies</h3>
+  <ol>
+  <li>Preheat the oven to 150 C / gas mark 2.</li>
+  <li>Add butter and sugar in a bowl and mix well until 
+    light and fluffy.</li>
+  <li>Add the vanilla, mix, then add the flour and mix well.</li>
+  <li>Roll out to about 5mm. Cut into shapes.</li>
+  <li>Bake for 25 minutes or until golden brown.</li>
+</ol>
+  
+  
+  </body>
 </html>
+  
