--- a/week02/index.html
+++ b/week02/index.html
@@ -8,6 +8,6 @@
 <body>
   <h1>Using an image in the page.</h1>
   <img src="https://jocellyyne.github.io/week02/Kitten.jpg" alt="Kitten with green eyes"width="350"
-       <a href="url">Visit my test page</a></o>
+      <p><a href="url">Visit my test page</a></o>
 </body>
 </html>
