--- a/week03/index2.html
+++ b/week03/index2.html
@@ -1,4 +1,12 @@
-Black Goose Bistro
+<!DOCTYPE html>
+<html>
+
+<head>
+  <meta charset="utf-8">
+  <titkle>Black Goose Bistro</title>
+  </head>
+  <body>
+    Black Goose Bristro
 
 The Restaurant
 The Black Goose Bistro offers casual lunch and dinner fare in a relaxed atmosphere. The menu changes regularly to highlight the freshest local ingredients.
@@ -9,3 +17,5 @@ You have fun. We'll handle the cooking. Black Goose Catering can handle events f
 Location and Hours
 Seekonk, Massachusetts;
 Monday through Thursday 11am to 9pm; Friday and Saturday, 11am to midnight
+  </body>
+</html>
