--- a/week03/index5.html
+++ b/week03/index5.html
@@ -38,7 +38,7 @@
 <p>You have fun. <em> We'll handle the cooking.</em> Black Goose Catering can handle events from snacks for a meetup to elegant corporate fundraisers.</p>
 
 <h2>Location and Hours</h2>
-<p>Seekonk, Massachusetts;
+<p>Seekonk, Massachusetts;<br>
   Monday through Thursday 11am to 9pm;<br> Friday and Saturday, 11am to midnight</p>
  
  </body>
