--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
           <meta charset="utf-8">
           <title>Jocelyne Sanchez Design Portfolio</title>
           <meta name="author" content="Jocelyne Sanchez">
-          <meta name="keywords" content="html,web design,portfolio">
+          <meta name="keywords" content="html,Web design,portfolio">
           <meta name="description" content="Welcome to a display of my web design portfolio.">
   </head>
 <body>
