--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
           <meta charset="utf-8">
           <title>Jocelyne Sanchez Design Portfolio</title>
           <meta name="author" content="Jocelyne Sanchez">
-          <meta name="keywords" content="html,Web design,portfolio">
+          <meta name="keywords" content="html,web design,portfolio">
           <meta name="description" content="Welcome to a display of my web design portfolio.">
   </head>
 <body>
    <header>
-      <h1>Jocelyne Sanchez web Design Portfolio</h1>
+      <h1>Jocelyne Sanchez Web Design Portfolio</h1>
   </header>
     <p>Our portfolio offers you a display of web layouts - a sampling of what we can do for you!</p>
     <p>Call us today for a free consultation.</p>
