--- a/week04/oed.html
+++ b/week04/oed.html
@@ -36,7 +36,7 @@
     <p>This is a fictional site created for a class at El Centro College. Check out the rest of my site!</p>
 <footer>
       <p><small>2020, Jocelyne Sanchez Web Design<br>
-            Last  Updated: Today's Date</small>
+            Last  Updated: October 15, 2020</small>
      </p>
    </footer>
   </body>
