--- a/jenskitchen/index.html
+++ b/jenskitchen/index.html
@@ -35,7 +35,7 @@ small {
 
 <h2>From Jen&rsquo;s Cookbook</h2>
 <ul>
-<li><a href="tapenade.html">Tapenade (Olive Spread)</a></li>
+<li><a href="index.html/tapenade.html">Tapenade (Olive Spread)</a></li>
 <li><a href="recipes/salmon.html">Garlic Salmon</a></li>
   <li>Linguine with Clam Sauce</li>
   <li>Couscous with Peas and Mint</li>
