--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
      <head>
           https://codepen.io/jocellyyne/pen/YzGqBmq
           <meta charset="utf-8">
+          <link rel="stylesheet" href="myStyles.css">
           <title>Jocelyne Sanchez Design Portfolio</title>
           <meta name="author" content="Jocelyne Sanchez">
           <meta name="keywords" content="html,web design,portfolio">
