--- a/arbor/arbor.html
+++ b/arbor/arbor.html
@@ -4,14 +4,13 @@
       <title>Title of my Page</title>
    </head>
    <body>
-      <header>
-         
+      <header>     
       </header>
       <nav>
       <ul>
-         <li>Home</li>
-         <li>Specials</li>
-         <li>Classic Recipe of the Months</li>
+         <li><a href"/arbor/arbor.html">Home</a></li>
+         <li><a href"/arbor/specials.html">Specials"</a></li>
+         <li><a href"/arbor/recipe.html">Classic Recipe of the Months</a></li>
          </ul>  
       </nav>
       <main>
@@ -41,7 +40,8 @@
             214 224 4245</i></p>
          <p>Back to the Top</p>
          <p>Today's Date: December 7th 2020</p>
-      
+         <p>This is a fictional page created for a class at <a href="https://www.dcccd.edu/pages/default.aspx">El Centro College.</a></p>
+         <p>Check out the rest of my site!</p>
       </footer>
    </body>
 </html>
