--- a/arbor/arbor.html
+++ b/arbor/arbor.html
@@ -41,7 +41,7 @@
          <p><a href="#top">Back to the Top</a></p>
          <p>Today's Date: December 7th 2020</p>
          <p>This is a fictional page created for a class at <a href="https://www.dcccd.edu/pages/default.aspx">El Centro College.</a></p>
-         <p>Check out the rest of my <a href"https://jocellyyne.github.com">site</a>!</p>
+         <p>Check out the rest of my <a href"https://jocellyyne.github.com">site!</a></p>
       </footer>
    </body>
 </html>
