--- a/arbor/arbor.html
+++ b/arbor/arbor.html
@@ -8,9 +8,9 @@
       </header>
       <nav>
       <ul>
-         <li><a href"/arbor/arbor.html">Home</a></li>
-         <li><a href"/arbor/specials.html">Specials"</a></li>
-         <li><a href"/arbor/recipe.html">Classic Recipe of the Months</a></li>
+         <li><a href="/arbor/arbor.html">Home</a></li>
+         <li><a href="/arbor/specials.html">Specials"</a></li>
+         <li><a href="/arbor/recipe.html">Classic Recipe of the Months</a></li>
          </ul>  
       </nav>
       <main>
@@ -41,7 +41,7 @@
          <p><a href="#top">Back to the Top</a></p>
          <p>Today's Date: December 7th 2020</p>
          <p>This is a fictional page created for a class at <a href="https://www.dcccd.edu/pages/default.aspx">El Centro College.</a></p>
-         <p>Check out the rest of my <a href"https://jocellyyne.github.com">site!</a></p>
+         <p>Check out the rest of my <a href="https://jocellyyne.github.com">site!</a></p>
       </footer>
    </body>
 </html>
