--- a/arbor/recipe.html
+++ b/arbor/recipe.html
@@ -18,16 +18,16 @@
             <article>
                <h2>Lemon Chicken</h2>
                <p><b>Ingredients:</b></p>
-
-   <ul> 14 oz. chicken breasts</ul>
-   <ul>8 oz. chicken consome</ul>
-   <ul>2 tsp. garlic</ul>
-   <ul> 2 tsp. olive oil</ul>
-   <ul> 1 tsp. parsley, chopped</ul>
-   <ul> 1 tsp. capers</ul>
-   <ul>1 tsp. butter</ul>
-   <ul>1 lemon, halved</ul>
-               
+<ul>
+   14 oz. chicken breasts
+   8 oz. chicken consome
+   2 tsp. garlic
+   2 tsp. olive oil
+   1 tsp. parsley, chopped
+   1 tsp. capers
+   1 tsp. butter
+   1 lemon, halved
+    </ul>         
                <p><b>Instructions:</b></p>
 <ol>
                <li> Heat pan with olive oil. Sear chicken.</li>
