--- a/arbor/recipe.html
+++ b/arbor/recipe.html
@@ -19,14 +19,14 @@
                <h2>Lemon Chicken</h2>
                <p><b>Ingredients:</b></p>
 <ul>
-   14 oz. chicken breasts
-   8 oz. chicken consome
-   2 tsp. garlic
-   2 tsp. olive oil
-   1 tsp. parsley, chopped
-   1 tsp. capers
-   1 tsp. butter
-   1 lemon, halved
+   <li>14 oz. chicken breasts</li>
+   <li>8 oz. chicken consome</li>
+   <li>2 tsp. garlic</li>
+   <li>2 tsp. olive oil</li>
+   <li>1 tsp. parsley, chopped</li>
+   <li>1 tsp. capers</li>
+   <li>1 tsp. butter</li>
+   <li>1 lemon, halved</li>
     </ul>         
                <p><b>Instructions:</b></p>
 <ol>
