--- a/arbor/specials.html
+++ b/arbor/specials.html
@@ -35,9 +35,13 @@ steamed or fresh veggies
  </td>
   </tr>
   <tr>
-    <td>7</td>
-    <td>8</td>
-    <td>9</td>
+     <td><em>Fruit Surprise</em> $5.95<br>
+fresh berries, almonds & melon<br> with a lite glaze</td>
+     <td><em>Burger Delight $6.95</em><br>
+burger with spiced cheese fries<br>
+     </td>
+    <td>Roast Beef $6.95<br>
+baby carrots & new potatoes</td>
   </tr>
  
 </table>  
