--- a/arbor/specials.html
+++ b/arbor/specials.html
@@ -40,7 +40,7 @@ fresh berries, almonds & melon<br> with a lite glaze</td>
      <td><em>Burger Delight $6.95</em><br>
 burger with spiced cheese fries<br>
      </td>
-    <td>Roast Beef $6.95<br>
+     <td><em>Roast Beef $6.95</em><br>
 baby carrots & new potatoes</td>
   </tr>
  
